# rdl2arch-riscv

./: .gitignore  README.md  pyproject.toml
src/rdl2arch_riscv/: __init__.py  __main__.py  clint_exporter.py  emit_access_controller.py  emit_clint_logic.py  emit_csr_file.py  emit_csr_package.py  emit_plic_logic.py  emit_trap_coordinator.py  exporter.py  plic_exporter.py  scan_csrs.py  validate_csrs.py
src/rdl2arch_riscv/udps/: __init__.py  clint.py  counter.py  csr_addr.py  hw_mirror.py  plic.py  privilege.py  trap_lifecycle.py  trap_signal.py  warl.py  wpri.py
tests/: conftest.py  test_end_to_end.py  test_golden.py  test_unit.py  test_verilator.py
tests/cocotb_sv/: conftest.py
tests/cocotb_sv/cocotb_tests/: common.py  test_integrated.py
tests/cocotb_sv/drivers/: csr_pipeline.py
tests/cpu/: README.md  conftest.py  test_cpu_programs.py  test_soc_lint.py  test_timer_isr.py
tests/cpu/cocotb_tests/: .gitignore  conftest.py  test_debug_csrs_csrfile.py  test_ext_isr.py  test_hpm_csrs_csrfile.py  test_mcountinhibit_csrfile.py  test_mcycle_csrfile.py  test_mepc_mcause_mtval_csrfile.py  test_mie_mip_csrfile.py  test_mscratch_csrfile.py  test_mstatus_csrfile.py  (+4 more)
tests/rdl/: clint_basic.rdl  mtrap_ibex.rdl  mtrap_mscratch.rdl  mtrap_subset.rdl  plic_basic.rdl  plic_multictx.rdl  priv_override.rdl
tests/sim/: driver.py  harness.py  integrated_top.py  test_access_controller.py  test_clint.py  test_csr_file.py  test_integration.py  test_intr_integration.py  test_plic.py  test_plic_multictx.py  test_trap_coordinator.py
tests/synth/: Makefile  README.md  synth.py
(+51 files in other folders)
